00.main.tf
provider "aws" {
  region = "ap-northeast-2"  # 서울 리전
}

resource "aws_vpc" "main_vpc" {
  cidr_block = "10.0.0.0/16"
  enable_dns_support = true
  enable_dns_hostnames = true
  tags = {
    Name = "main_vpc"
  }
}
